--- a/part2/package.json
+++ b/part2/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "express": "^4.18.2",
     "morgan": "~1.9.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.3.2"
   }
 }
